# rdkb-RdkTelcoVoiceManager

./: CONTRIBUTING.md  Makefile.am  NOTICE  cmpnt_build_custom_pre.mk  configure.ac
cfg/: Makefile.am
config/: RdkTelcoVoiceManager_v1.xml  RdkTelcoVoiceManager_v2.xml  telcovoice_config_default.json  telcovoice_config_default_v2.json  telcovoice_manager_conf.json
hal_schema/: example_configureObject_msg.json  example_deleteObject_msg.json  example_getParameters_msg.json  example_getSchema_msg.json  example_publishEvent_msg.json  example_result_msg.json  example_setParameters_msg.json  example_subscribeEvent_msg.json  telcovoice_hal_schema_v1.json  telcovoice_hal_schema_v2.json
source/: Makefile.am
source/TR-181/: Makefile.am
source/TR-181/include/: telcovoicemgr_dml_json_cfg_init.h  telcovoicemgr_services_apis.h  telcovoicemgr_services_apis_v1.h  telcovoicemgr_services_apis_v2.h  telcovoicemgr_telcovoice_apis.h  telcovoicemgr_webconfig.h  voice_report.h
source/TR-181/integration_src.shared/: Makefile.am  VoiceDiagnostics.avsc  VoiceDiagnostics_V2.avsc  telcovoicemgr_dml_json_cfg_init.c  telcovoicemgr_dml_json_save.c  telcovoicemgr_services_apis.c  telcovoicemgr_telcovoice_apis.c  telcovoicemgr_webconfig.c  voice_report.c  voice_report_webpa_intf.c
source/TR-181/middle_layer_src/: Makefile.am  telcovoicemgr_dml_apis.c  telcovoicemgr_dml_apis.h  telcovoicemgr_dml_backendmgr.c  telcovoicemgr_dml_backendmgr.h  telcovoicemgr_dml_capabilities.c  telcovoicemgr_dml_capabilities_v1.c  telcovoicemgr_dml_data.c  telcovoicemgr_dml_data_v1.c  telcovoicemgr_dml_data_v2.c  telcovoicemgr_dml_hal.c  telcovoicemgr_dml_hal.h  telcovoicemgr_dml_hal_param_v1.c  telcovoicemgr_dml_hal_param_v1.h  telcovoicemgr_dml_hal_param_v2.c  telcovoicemgr_dml_hal_param_v2.h  telcovoicemgr_dml_json_cfg_init.c  telcovoicemgr_dml_json_cfg_init.h  telcovoicemgr_dml_line.c  telcovoicemgr_dml_line_v1.c  telcovoicemgr_dml_line_v1.h  telcovoicemgr_dml_numberingplan.c  telcovoicemgr_dml_numberingplan.h  telcovoicemgr_dml_numberingplan_v1.c  telcovoicemgr_dml_physical_interface.c  telcovoicemgr_dml_physical_interface_v1.c  telcovoicemgr_dml_plugin_main.c  telcovoicemgr_dml_plugin_main.h  telcovoicemgr_dml_profile.c  telcovoicemgr_dml_profile_v1.c  telcovoicemgr_dml_profile_v1.h  telcovoicemgr_dml_report.c  telcovoicemgr_dml_report.h  telcovoicemgr_dml_services.c  telcovoicemgr_dml_services.h  telcovoicemgr_dml_services_v1.c  telcovoicemgr_dml_telcovoice.c  telcovoicemgr_dml_telcovoice.h  telcovoicemgr_dml_tone.c  telcovoicemgr_dml_tone.h  (+23 more)
source/TelcoVoiceManager/: Makefile.am  telcovoicemgr_breakpad_wrapper.cpp  telcovoicemgr_breakpad_wrapper.h  telcovoicemgr_controller.c  telcovoicemgr_controller.h  telcovoicemgr_nw_monitor.c  telcovoicemgr_nw_monitor.h  telcovoicemgr_ssp_action.c  telcovoicemgr_ssp_global.h  telcovoicemgr_ssp_internal.h  telcovoicemgr_ssp_main.c  telcovoicemgr_ssp_messagebus_interface.c  telcovoicemgr_ssp_messagebus_interface.h
